syntax = "proto3";

option go_package = "github.com/s-matke/abp/abp-back/common/availability";

package availability;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service AvailabilityService {
    rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        option (google.api.http) = {
            get: "/availability"
        };
    }

    rpc CreateAvailability(CreateAvailabilityRequest) returns(CreateAvailabilityResponse) {
        option (google.api.http) = {
            post: "/availability"
            body: "availability"
        };
    }
}

message GetAllRequest {}

message GetAllResponse {
    repeated Availability availabilities = 1;
}

message CreateAvailabilityRequest {
    NewAvailability availability = 1;
}

message CreateAvailabilityResponse {
    Availability availability = 1;
}

message Availability {
    string id = 1;
    string accommodation_id = 2;
    google.protobuf.Timestamp startDate = 3;
    google.protobuf.Timestamp endDate = 4;
}

message NewAvailability {
    string accommodation_id = 1;
    google.protobuf.Timestamp startDate = 2;
    google.protobuf.Timestamp endDate = 3;
}