syntax = "proto3";

option go_package = "common/user_service";

package user;

import "google/api/annotations.proto";

service UserService {
    rpc Get(GetRequest) returns(GetResponse) {
        option (google.api.http) = {
            get: "/user/{id}"
        };
    }

    rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        option (google.api.http) = {
            get: "/user"
        };
    }
}

message GetRequest {
    string id = 1;
}

message GetResponse {
    User user = 1;
}

message GetAllRequest {
}

message GetAllResponse {
    repeated User users = 1;
}

message User {
    string id = 1;
    string username = 2;
    string name = 3;
    string surname = 4;
    string phoneNumber = 5;
    string email = 6;
    string password = 7;
    //Role role = 8;
    //Location location = 9;
}

// message Location {
//     string city = 1;
//     string country = 2;
// }

// enum Role {
//     GUEST = 0;
//     HOST = 1;    
// }